--- a/config/.htaccess
+++ b/config/.htaccess
@@ -5,4 +5,7 @@ RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
+RewriteEngine On
+RewriteBase /
+RewriteRule ^robots.txt$ /robots.php
 </IfModule>
