--- a/config/.htaccess
+++ b/config/.htaccess
@@ -9,3 +9,7 @@ RewriteEngine On
 RewriteBase /
 RewriteRule ^robots.txt$ /robots.php
 </IfModule>
+php_value upload_max_filesize 128M
+php_value post_max_size 128M
+php_value max_execution_time 300
+php_value max_input_time 300
